Fix FooterToolbar z-index, close #362

--- a/src/components/FooterToolbar/index.less
+++ b/src/components/FooterToolbar/index.less
@@ -12,6 +12,7 @@
   border-top: 1px solid @border-color-split;
   padding: 0 24px;
   transition: all .3s;
+  z-index: 9;
 
   &:after {
     content: "";
